--- a/app/ui/global.css
+++ b/app/ui/global.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import "~flag-icons/css/flag-icons.min.css";
+@import '~flag-icons/css/flag-icons.min.css';
 
 input[type='number'] {
   -moz-appearance: textfield;
